--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formkit/auto-animate": "^0.7.0",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.2",
+    "framer-motion": "^4.1.17",
+    "npm": "^6.13.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-image-gallery": "^1.2.12",
+    "react-progressive-image": "^0.6.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-social-media-embed": "^2.3.5",
+    "react-switch": "^7.0.0",
+    "sass": "^1.64.1",
+    "swiper": "^10.0.4",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
